# simplismart-deployment-cli

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/launchd/: com.simplismart.deployment-schedule.plist
examples/systemd/: simplismart-deployment-schedule.service
src/simplismart_deployment_cli/: __init__.py  cli.py  manager.py  scheduling.py  settings.py
src/simplismart_deployment_manager/: __init__.py  cli.py  manager.py  settings.py
tests/: test_cli.py  test_manager.py  test_scheduling.py
